# TATty-AGENT

./: .env.example  .gitignore  ENHANCED_ERROR_HANDLING.md  README.md  agent_runtime.py  main.py  pnl_by_commodity_2025_daily.csv  pyproject.toml  tui.py
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py
baml_src/: agent-tools.baml  agent.baml
scripts/: data_analysis.py  plot_generator.py
tatty_agent/: __init__.py  test_intent_classification.py
tatty_agent/assets/baml_client/: inlinedbaml.py  type_builder.py  types.py
tatty_agent/assets/baml_src/: agent.baml
tatty_agent/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
tatty_agent/baml_src/: agent.baml
tatty_agent/core/: runtime.py  state.py  types.py
tatty_agent/docs/: DISTRIBUTION.md  README.md  __init__.py
tatty_agent/examples/: __init__.py  hello_world.ipynb  tatty_agent_jupyter_demo.ipynb
tatty_agent/jupyter/: __init__.py  display.py  magic.py  notebook.py
tatty_agent/tests/: __init__.py
tatty_agent/tools/: artifacts.py  development.py  file_ops.py  registry.py  system.py  utility.py  web.py
